@@ -60,6 +60,8 @@ Trash Bin | jump_bt5
 Trash Bin | view
 Trash Folder | view
 Trash Tool | view
+Zodb Cache | statistics
+Zodb Cache | view
 portal_actions | bt_tool
 portal_actions | category_tool
 portal_actions | create_module
