@@ -31,3 +31,4 @@ Template Tool
 Trash Bin
 Trash Folder
 Trash Tool
+Zodb Cache
